<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/se_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/change_pwd"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/old_pwd"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/old_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:hint="@string/old_pwd_text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/new_pwd"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:hint="@string/new_pwd_text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/confirm_pwd"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:hint="@string/confirm_pwd_text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_selector"
        android:text="@string/confirm"
        android:textColor="#fff"
        android:textSize="20sp"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
