<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/se_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff">

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="fill_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/account"
            android:textSize="20sp" />

        <com.example.adroidexercitation.view.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/user_head" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/phone"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/security"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/notice"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/privacy"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/general"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/auxiliary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/change_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/change_pwd"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:drawableEnd="@drawable/next"
        android:gravity="fill_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/logout"
        android:textSize="20sp" />

</LinearLayout>
