<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <com.example.adroidexercitation.view.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/user_head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:text="@string/user_name"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_head"
        android:orientation="vertical">

        <com.example.adroidexercitation.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_crown"
            app:itemText="@string/get_more_about_member" />

        <com.example.adroidexercitation.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_wallet"
            app:itemText="@string/my_wallet" />

        <com.example.adroidexercitation.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_favourite"
            app:itemText="@string/my_favourite" />

        <com.example.adroidexercitation.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_photo"
            app:itemText="@string/my_photo" />

        <com.example.adroidexercitation.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_folder"
            app:itemText="@string/my_folder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/menu_item_setting"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingStart="20dip"
            android:paddingTop="10dip"
            android:paddingEnd="15dip"
            android:paddingBottom="10dip"
            android:text="@string/setting"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/menu_item_moon"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingStart="15dip"
            android:paddingTop="10dip"
            android:paddingEnd="20dip"
            android:paddingBottom="10dip"
            android:text="@string/night"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
